@@ -14,22 +14,30 @@ import dev.langchain4j.rag.query.router.DefaultQueryRouter;
 import dev.langchain4j.rag.query.router.QueryRouter;
 import dev.langchain4j.rag.query.transformer.DefaultQueryTransformer;
 import dev.langchain4j.rag.query.transformer.QueryTransformer;
-import lombok.Builder;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
-import java.util.concurrent.*;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.Executor;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.SynchronousQueue;
+import java.util.concurrent.ThreadPoolExecutor;
 
 import static dev.langchain4j.internal.Utils.getOrDefault;
 import static dev.langchain4j.internal.ValidationUtils.ensureNotNull;
-import static java.util.Collections.*;
+import static java.util.Collections.emptyMap;
+import static java.util.Collections.singletonList;
+import static java.util.Collections.singletonMap;
 import static java.util.concurrent.CompletableFuture.allOf;
 import static java.util.concurrent.CompletableFuture.supplyAsync;
 import static java.util.concurrent.TimeUnit.SECONDS;
-import static java.util.stream.Collectors.*;
+import static java.util.stream.Collectors.joining;
+import static java.util.stream.Collectors.toMap;
 
 /**
  * The default implementation of {@link RetrievalAugmentor} intended to be suitable for the majority of use cases.
@@ -109,7 +117,6 @@ public class DefaultRetrievalAugmentor implements RetrievalAugmentor {
     private final ContentInjector contentInjector;
     private final Executor executor;
 
-    @Builder
     public DefaultRetrievalAugmentor(QueryTransformer queryTransformer,
                                      QueryRouter queryRouter,
                                      ContentAggregator contentAggregator,
@@ -124,9 +131,9 @@ public class DefaultRetrievalAugmentor implements RetrievalAugmentor {
 
     private static ExecutorService createDefaultExecutor() {
         return new ThreadPoolExecutor(
-                0, Integer.MAX_VALUE,
-                1, SECONDS,
-                new SynchronousQueue<>()
+            0, Integer.MAX_VALUE,
+            1, SECONDS,
+            new SynchronousQueue<>()
         );
     }
 
@@ -160,9 +167,9 @@ public class DefaultRetrievalAugmentor implements RetrievalAugmentor {
         log(augmentedChatMessage);
 
         return AugmentationResult.builder()
-                .chatMessage(augmentedChatMessage)
-                .contents(contents)
-                .build();
+            .chatMessage(augmentedChatMessage)
+            .contents(contents)
+            .build();
     }
 
     private Map<Query, Collection<List<Content>>> process(Collection<Query> queries) {
@@ -183,13 +190,13 @@ public class DefaultRetrievalAugmentor implements RetrievalAugmentor {
             Map<Query, CompletableFuture<Collection<List<Content>>>> queryToFutureContents = new ConcurrentHashMap<>();
             queries.forEach(query -> {
                 CompletableFuture<Collection<List<Content>>> futureContents =
-                        supplyAsync(() -> {
-                                    Collection<ContentRetriever> retrievers = queryRouter.route(query);
-                                    log(query, retrievers);
-                                    return retrievers;
-                                },
-                                executor
-                        ).thenCompose(retrievers -> retrieveFromAll(retrievers, query));
+                    supplyAsync(() -> {
+                            Collection<ContentRetriever> retrievers = queryRouter.route(query);
+                            log(query, retrievers);
+                            return retrievers;
+                        },
+                        executor
+                    ).thenCompose(retrievers -> retrieveFromAll(retrievers, query));
                 queryToFutureContents.put(query, futureContents);
             });
             return join(queryToFutureContents);
@@ -201,15 +208,14 @@ public class DefaultRetrievalAugmentor implements RetrievalAugmentor {
     private CompletableFuture<Collection<List<Content>>> retrieveFromAll(Collection<ContentRetriever> retrievers,
                                                                          Query query) {
         List<CompletableFuture<List<Content>>> futureContents = retrievers.stream()
-                .map(retriever -> supplyAsync(() -> retrieve(retriever, query), executor))
-                .collect(toList());
+            .map(retriever -> supplyAsync(() -> retrieve(retriever, query), executor))
+            .toList();
 
         return allOf(futureContents.toArray(new CompletableFuture[0]))
-                .thenApply(ignored ->
-                        futureContents.stream()
-                                .map(CompletableFuture::join)
-                                .collect(toList())
-                );
+            .thenApply(ignored ->
+                futureContents.stream()
+                    .map(CompletableFuture::join)
+                    .toList());
     }
 
     private static List<Content> retrieve(ContentRetriever retriever, Query query) {
@@ -219,15 +225,15 @@ public class DefaultRetrievalAugmentor implements RetrievalAugmentor {
     }
 
     private static Map<Query, Collection<List<Content>>> join(
-            Map<Query, CompletableFuture<Collection<List<Content>>>> queryToFutureContents) {
+        Map<Query, CompletableFuture<Collection<List<Content>>>> queryToFutureContents) {
         return allOf(queryToFutureContents.values().toArray(new CompletableFuture[0]))
-                .thenApply(ignored ->
-                        queryToFutureContents.entrySet().stream()
-                                .collect(toMap(
-                                        Map.Entry::getKey,
-                                        entry -> entry.getValue().join()
-                                ))
-                ).join();
+            .thenApply(ignored ->
+                queryToFutureContents.entrySet().stream()
+                    .collect(toMap(
+                        Map.Entry::getKey,
+                        entry -> entry.getValue().join()
+                    ))
+            ).join();
     }
 
     private static void logQueries(Query originalQuery, Collection<Query> queries) {
@@ -235,14 +241,14 @@ public class DefaultRetrievalAugmentor implements RetrievalAugmentor {
             Query transformedQuery = queries.iterator().next();
             if (!transformedQuery.equals(originalQuery)) {
                 log.debug("Transformed original query '{}' into '{}'",
-                        originalQuery.text(), transformedQuery.text());
+                    originalQuery.text(), transformedQuery.text());
             }
-        } else {
+        } else if (log.isDebugEnabled()){
             log.debug("Transformed original query '{}' into the following queries:\n{}",
-                    originalQuery.text(), queries.stream()
-                            .map(Query::text)
-                            .map(query -> "- '" + query + "'")
-                            .collect(joining("\n")));
+                originalQuery.text(), queries.stream()
+                    .map(Query::text)
+                    .map(query -> "- '" + query + "'")
+                    .collect(joining("\n")));
         }
     }
 
@@ -250,27 +256,40 @@ public class DefaultRetrievalAugmentor implements RetrievalAugmentor {
         // TODO use retriever id
         if (retrievers.size() == 1) {
             log.debug("Routing query '{}' to the following retriever: {}",
-                    query.text(), retrievers.iterator().next());
-        } else {
+                query.text(), retrievers.iterator().next());
+        } else if (log.isDebugEnabled()) {
             log.debug("Routing query '{}' to the following retrievers:\n{}",
-                    query.text(), retrievers.stream()
-                            .map(retriever -> "- " + retriever.toString())
-                            .collect(joining("\n")));
+                query.text(), retrievers.stream()
+                    .map(retriever -> "- " + retriever.toString())
+                    .collect(joining("\n")));
         }
     }
 
     private static void log(Query query, ContentRetriever retriever, List<Content> contents) {
         // TODO use retriever id
         log.debug("Retrieved {} contents using query '{}' and retriever '{}'",
-                contents.size(), query.text(), retriever);
+            contents.size(), query.text(), retriever);
 
-        if (contents.size() > 0) {
-            log.trace("Retrieved {} contents using query '{}' and retriever '{}':\n{}",
-                    contents.size(), query.text(), retriever, contents.stream()
-                            .map(Content::textSegment)
-                            .map(segment -> "- " + escapeNewlines(segment.text()))
-                            .collect(joining("\n")));
+        if (!log.isTraceEnabled()) {
+            return;
         }
+
+        if (!contents.isEmpty()) {
+            final var contentsSting = contents.stream()
+                .map(Content::textSegment)
+                .map(segment -> "- " + escapeNewlines(segment.text()))
+                .collect(joining("\n"));
+            log.trace("Retrieved {} contents using query '{}' and retriever '{}':\n{}",
+                contents.size(),
+                query.text(),
+                retriever.getClass().getName(),
+                contentsSting);
+        } else {
+            log.trace("Retrieved 0 contents using query '{}' and retriever '{}'",
+                query.text(),
+                retriever.getClass().getName());
+        }
+
     }
 
     private static void log(Map<Query, Collection<List<Content>>> queryToContents, List<Content> contents) {
@@ -287,15 +306,21 @@ public class DefaultRetrievalAugmentor implements RetrievalAugmentor {
 
         log.debug("Aggregated {} content(s) into {}", contentCount, contents.size());
 
-        log.trace("Aggregated {} content(s) into:\n{}",
+        if (log.isTraceEnabled()) {
+            log.trace("Aggregated {} content(s) into:\n{}",
                 contentCount, contents.stream()
-                        .map(Content::textSegment)
-                        .map(segment -> "- " + escapeNewlines(segment.text()))
-                        .collect(joining("\n")));
+                    .map(Content::textSegment)
+                    .map(segment -> "- " + escapeNewlines(segment.text()))
+                    .collect(joining("\n")));
+        }
     }
 
     private static void log(ChatMessage augmentedChatMessage) {
-        log.trace("Augmented chat message: {}", escapeNewlines(augmentedChatMessage.text()));
+        if (log.isTraceEnabled()) {
+            log.trace("Augmented chat message: {}",
+                escapeNewlines(augmentedChatMessage.text())
+            );
+        }
     }
 
     private static String escapeNewlines(String text) {
@@ -308,9 +333,51 @@ public class DefaultRetrievalAugmentor implements RetrievalAugmentor {
 
     public static class DefaultRetrievalAugmentorBuilder {
 
+        private QueryTransformer queryTransformer;
+        private QueryRouter queryRouter;
+        private ContentAggregator contentAggregator;
+        private ContentInjector contentInjector;
+        private Executor executor;
+
+        DefaultRetrievalAugmentorBuilder() {
+        }
+
         public DefaultRetrievalAugmentorBuilder contentRetriever(ContentRetriever contentRetriever) {
             this.queryRouter = new DefaultQueryRouter(ensureNotNull(contentRetriever, "contentRetriever"));
             return this;
+        }
+
+        public DefaultRetrievalAugmentorBuilder queryTransformer(QueryTransformer queryTransformer) {
+            this.queryTransformer = queryTransformer;
+            return this;
+        }
+
+        public DefaultRetrievalAugmentorBuilder queryRouter(QueryRouter queryRouter) {
+            this.queryRouter = queryRouter;
+            return this;
+        }
+
+        public DefaultRetrievalAugmentorBuilder contentAggregator(ContentAggregator contentAggregator) {
+            this.contentAggregator = contentAggregator;
+            return this;
+        }
+
+        public DefaultRetrievalAugmentorBuilder contentInjector(ContentInjector contentInjector) {
+            this.contentInjector = contentInjector;
+            return this;
+        }
+
+        public DefaultRetrievalAugmentorBuilder executor(Executor executor) {
+            this.executor = executor;
+            return this;
+        }
+
+        public DefaultRetrievalAugmentor build() {
+            return new DefaultRetrievalAugmentor(this.queryTransformer, this.queryRouter, this.contentAggregator, this.contentInjector, this.executor);
+        }
+
+        public String toString() {
+            return "DefaultRetrievalAugmentor.DefaultRetrievalAugmentorBuilder(queryTransformer=" + this.queryTransformer + ", queryRouter=" + this.queryRouter + ", contentAggregator=" + this.contentAggregator + ", contentInjector=" + this.contentInjector + ", executor=" + this.executor + ")";
         }
     }
 }
